# rpi_open_emulator

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: default.toml
packaging/: install-desktop.sh  rpi_open_emulator.desktop.in
src/: catalog.rs  config.rs  default_systems.rs  launcher.rs  library.rs  main.rs  theme.rs
src/core/: mod.rs
src/core/emulator/: launcher.rs  mod.rs
src/core/scraper/: mod.rs
src/plugins/: api.rs  mod.rs
src/product/: licensing.rs  mod.rs
src/state/: app_state.rs  filter_state.rs  mod.rs
src/themes/: default_preset.rs  minimal_preset.rs  mod.rs  neon_preset.rs  palette.rs
src/themes/custom/: mod.rs
src/ui/components/: game_card.rs  mod.rs  search_bar.rs  sidebar.rs
src/ui/screens/: game_detail.rs  home.rs  library.rs  mod.rs
