[package]
name = "rpi_open_emulator"
version = "0.1.0"
edition = "2021"
description = "Launcher desktop open-source para emulacao no Raspberry Pi (RetroArch)"
license = "MIT"

[dependencies]
anyhow = "1"
directories = "5"
eframe = { version = "0.27", default-features = true }
egui = "0.27"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
